new builds of styleguide resulting from source refactoring and new paths etc

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html><head><title>Style Guide</title><!-- - Include all the styles.   --><link rel="stylesheet" href="../css/style.css"></head><body><nav id="menu"><a href="#components">Components</a>
+<!DOCTYPE html><html><head><title>Style Guide</title><!-- - Include the styleguide stylesheet.   --><link rel="stylesheet" href="./css/styleguide.css"></head><body><nav id="menu"><a href="#components">Components</a>
 <a href="#html-tags">Standard HTML Tags</a></nav><h1>Style Guide</h1><p>This style guide includes some components and generic HTML tags.</p><div id="components"><!-- - using the allComponents variable to include all components in /components. --><div><div class="component-example"><h1>standard-block</h1><hr/><div class="component-wrapper"><div class="block">
   <div class="block-title">
-    <h2>{{ This is a standard block }}</h2>
+    <h2>{{ This is a standard block title}}</h2>
   </div>
   <div class="block-content">
     <p>
-      {{ Lorem ipsum.... }}
+      {{ Lorem ipsum.... standard block body }}
     </p>
   </div>
 </div></div></div></div></div><!-- TODO: these should be an include as well perhaps...--><div id="html-tags"><section><h1>Header 1</h1><h2>Header 2</h2><h3>Header 3</h3><h4>Header 4</h4><h5>Header 5</h5><h6>Header 6</h6></section></div><footer><p>Last updated 2018.</p></footer></body></html>
