--- a/styleguide/sg-includes/standard-tags.html
+++ b/styleguide/sg-includes/standard-tags.html
@@ -1,6 +1,6 @@
 <!-- TODO: need some better examples for forms, images etc. -->
 <!-- vanilla HTML section -->
-<h2 id="vanilla-tags">Vanilla HTML Tags:</h2>
+<h2>Standard HTML Tags:</h2>
 <h1>h1 header</h1>
 <h2>h2 header</h2>
 <h3>h3 header</h3>
